@@ -4,7 +4,7 @@
     <id>adl-parser</id>
     <name>java ADL Parser</name>
     <groupId>acode</groupId>
-    <currentVersion>1.0.2-SNAPSHOT</currentVersion>
+    <currentVersion>1.0.4-SNAPSHOT</currentVersion>
     <organization>
         <name>Acode HB</name>
         <url>http://www.acode.se/</url>
